[FIX] web: improve SelectMenu design in Milk
Prior to this commit, some visual style of the SelectMenu component had
not been adapted since the latest Odoo redesign (named Milk). This made
some parts of the menu inappropriate with the current padding of the input,
and the border would not fit anymore, since the input is no longer linked
to the menu.

Also, the search input no longer had a pointer: text associated, but a
pointer instead, which seems wrong as the user can type in it.

Finally, some element were not visible correctly in dark mode.

This commit improves the overall look of the SelectMenu component when being
used with this design.

--- a/addons/web/static/src/core/select_menu/select_menu.scss
+++ b/addons/web/static/src/core/select_menu/select_menu.scss
@@ -29,33 +29,24 @@
     .o_select_menu_menu {
         min-width: fit-content;
         max-height: 350px;
-        border: 1px solid $o-brand-primary;
 
         .o_select_menu_sticky {
             background-color: $dropdown-bg !important;
-
-            &.o_select_menu_item {
-                &:focus, &:hover {
-                    background: $dropdown-border-color !important;
-                }
-            }
+            cursor: text !important;
         }
         .o_select_menu_group {
-            top: 40px;
+            top: 50px;
         }
     }
 
-    .o_select_menu_multi_select {
-        .o_select_active {
-            background: $o-brand-primary;
-            background: linear-gradient(to right, $o-danger 50%, $o-brand-primary 50%);
-            background-size: 200% 100%;
-            background-position: right bottom;
-            transition: background .4s cubic-bezier(0.33, 1, 0.68, 1);
-        }
+    .o_select_active {
+        color: white;
+    }
 
+    .o_select_menu_multi_select {
         .o_select_active:hover {
-            background-position: left bottom;
+            background: $o-danger !important;
+            transition: background .5s;
         }
     }
 
@@ -66,10 +57,8 @@
 
 .dropup .o_select_menu_menu {
     box-shadow: 0 -7px 10px rgba(8, 8, 8, 0.319);
-    border-bottom: none;
 }
 
 .dropdown .o_select_menu_menu {
     box-shadow: 0 7px 10px rgba(8, 8, 8, 0.319);
-    border-top: none;
 }
